[package]
name = "rust_c_imports_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
regex = "1.10.2"
syn = {version = "2.0.38", features = ["extra-traits"]}

